<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2303A9F4"
    android:orientation="vertical"
    tools:context="com.adriel.onetohundred.InstructionActivity">

    <TextView
        android:id="@+id/instructionTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:foregroundGravity="center"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:background="#3F51B5"
            android:contentDescription="@string/previous"
            android:minHeight="48dp"
            android:rotation="180"
            app:srcCompat="@android:drawable/ic_media_play" />

        <TextView
            android:id="@+id/instructionTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="35dp"
            android:gravity="center_vertical"
            android:text="@string/instruction_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:background="#3F51B5"
            android:contentDescription="@string/next"
            android:minHeight="48dp"
            app:srcCompat="@android:drawable/ic_media_play"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />
    </FrameLayout>

    <Button
        android:id="@+id/toMainButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/to_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#00695C"
        app:backgroundTint="#8BC34A" />

</LinearLayout>