<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2303A9F4"
    android:orientation="vertical"
    tools:context=".fragment.EnterNameFragment">

    <TextView
        android:id="@+id/playerTextViewEnterName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:foregroundGravity="center"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/judge"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/guideTextViewEnterName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/guide_enter_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/nextStepButtonEnterName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#00695C"
        app:backgroundTint="#8BC34A" />

</LinearLayout>
