<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2303A9F4"
    android:orientation="vertical"
    tools:context=".fragment.ConfirmFragment">

    <TextView
        android:id="@+id/playerTextViewConfirm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:foregroundGravity="center"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/judge"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/confirmTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/confirm_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/numTextViewConfirm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/one"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#546E7A"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirmButtonTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:foregroundGravity="center"
        android:gravity="center_vertical"
        android:text="@string/confirm_button_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/changeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/placeholderTextView"
            android:layout_toLeftOf="@+id/placeholderTextView"
            android:text="@string/change"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            app:backgroundTint="#F44336" />

        <TextView
            android:id="@+id/placeholderTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/placeholderTextView"
            android:layout_toRightOf="@+id/placeholderTextView"
            android:text="@string/confirm"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00695C"
            app:backgroundTint="#8BC34A" />
    </RelativeLayout>

</LinearLayout>