<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2303A9F4"
    android:orientation="vertical"
    tools:context=".fragment.PromptFragment" >

    <TextView
        android:id="@+id/playerTextViewPrompt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:fontFamily="sans-serif-black"
        android:foregroundGravity="center"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/judge"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/passDeviceTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:foregroundGravity="center"
        android:gravity="center_vertical"
        android:text="@string/pass_device_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/continue_game"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#00695C"
        app:backgroundTint="#8BC34A" />
</LinearLayout>