<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="#2303A9F4"
    android:orientation="vertical"
    tools:context="com.adriel.onetohundred.MainActivity">

    <TextView
        android:id="@+id/endMsgTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#00695C"
        app:backgroundTint="#8BC34A" />

    <Button
        android:id="@+id/instructionButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        app:backgroundTint="#F44336" />
</LinearLayout>